[package]
name = "tcp-tunnel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.21.0", features = ["full"] }
bytes = { version = "1.2.1", features = ["serde"] }
backoff = { version = "0.4", features = ["tokio"] }
bincode = "1.3.3"
tracing = "0.1.36"
tracing-subscriber = "0.3.15"
rand = "0.8.4"
parking_lot = "0.12.1"
crossbeam-channel = "0.5.6"

axum = "0.5.17"
tower = { version = "0.4", features = ["util", "timeout", "load-shed", "limit"] }
tower-http = { version = "0.3.0", features = ["add-extension", "auth", "compression-full", "trace"] }